--- a/original_data/preprocess_data.ipynb
+++ b/original_data/preprocess_data.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "f745ffb8",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b21a8892",
    "metadata": {},
    "outputs": [],
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "6e24be54",
    "metadata": {},
    "outputs": [
@@ -974,10 +974,428 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "a50bec98",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>biomass</th>\n",
+       "      <th>brown_coal/lignite</th>\n",
+       "      <th>coal_derived_gas</th>\n",
+       "      <th>natural_gas</th>\n",
+       "      <th>hard_coal</th>\n",
+       "      <th>oil</th>\n",
+       "      <th>hydro_pumped_storage</th>\n",
+       "      <th>hydro_run_of_river</th>\n",
+       "      <th>hydro_water_reservoir</th>\n",
+       "      <th>solar</th>\n",
+       "      <th>wind</th>\n",
+       "      <th>day_ahead_price_eur</th>\n",
+       "      <th>day_ahead_load_forecast</th>\n",
+       "      <th>trade_balance</th>\n",
+       "      <th>co2_eur/ton</th>\n",
+       "      <th>natural_gas_eur/mwh</th>\n",
+       "      <th>coal_eur/ton</th>\n",
+       "      <th>installed_solar_capacity</th>\n",
+       "      <th>installed_wind</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date (UTC)</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01 00:00:00</th>\n",
+       "      <td>221</td>\n",
+       "      <td>2422</td>\n",
+       "      <td>64</td>\n",
+       "      <td>996</td>\n",
+       "      <td>5685</td>\n",
+       "      <td>280</td>\n",
+       "      <td>0</td>\n",
+       "      <td>176</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4244</td>\n",
+       "      <td>49.37</td>\n",
+       "      <td>14750</td>\n",
+       "      <td>-0.0</td>\n",
+       "      <td>82.71</td>\n",
+       "      <td>89.7754</td>\n",
+       "      <td>63.9408</td>\n",
+       "      <td>8161.0</td>\n",
+       "      <td>6570.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01 01:00:00</th>\n",
+       "      <td>221</td>\n",
+       "      <td>2466</td>\n",
+       "      <td>64</td>\n",
+       "      <td>1003</td>\n",
+       "      <td>5683</td>\n",
+       "      <td>277</td>\n",
+       "      <td>0</td>\n",
+       "      <td>199</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4071</td>\n",
+       "      <td>43.22</td>\n",
+       "      <td>14100</td>\n",
+       "      <td>-127.0</td>\n",
+       "      <td>82.71</td>\n",
+       "      <td>89.7754</td>\n",
+       "      <td>63.9408</td>\n",
+       "      <td>8161.0</td>\n",
+       "      <td>6570.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01 02:00:00</th>\n",
+       "      <td>223</td>\n",
+       "      <td>2560</td>\n",
+       "      <td>65</td>\n",
+       "      <td>996</td>\n",
+       "      <td>5704</td>\n",
+       "      <td>276</td>\n",
+       "      <td>0</td>\n",
+       "      <td>216</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3997</td>\n",
+       "      <td>45.46</td>\n",
+       "      <td>13700</td>\n",
+       "      <td>-722.6</td>\n",
+       "      <td>82.71</td>\n",
+       "      <td>89.7754</td>\n",
+       "      <td>63.9408</td>\n",
+       "      <td>8161.0</td>\n",
+       "      <td>6570.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01 03:00:00</th>\n",
+       "      <td>225</td>\n",
+       "      <td>2420</td>\n",
+       "      <td>65</td>\n",
+       "      <td>996</td>\n",
+       "      <td>5621</td>\n",
+       "      <td>276</td>\n",
+       "      <td>0</td>\n",
+       "      <td>238</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4105</td>\n",
+       "      <td>37.67</td>\n",
+       "      <td>13450</td>\n",
+       "      <td>-519.2</td>\n",
+       "      <td>82.71</td>\n",
+       "      <td>89.7754</td>\n",
+       "      <td>63.9408</td>\n",
+       "      <td>8161.0</td>\n",
+       "      <td>6570.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01 04:00:00</th>\n",
+       "      <td>229</td>\n",
+       "      <td>2416</td>\n",
+       "      <td>64</td>\n",
+       "      <td>996</td>\n",
+       "      <td>5621</td>\n",
+       "      <td>275</td>\n",
+       "      <td>0</td>\n",
+       "      <td>245</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4085</td>\n",
+       "      <td>39.70</td>\n",
+       "      <td>13500</td>\n",
+       "      <td>-431.7</td>\n",
+       "      <td>82.71</td>\n",
+       "      <td>89.7754</td>\n",
+       "      <td>63.9408</td>\n",
+       "      <td>8161.0</td>\n",
+       "      <td>6570.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-06-12 19:00:00</th>\n",
+       "      <td>289</td>\n",
+       "      <td>4744</td>\n",
+       "      <td>67</td>\n",
+       "      <td>1073</td>\n",
+       "      <td>9854</td>\n",
+       "      <td>273</td>\n",
+       "      <td>682</td>\n",
+       "      <td>229</td>\n",
+       "      <td>40</td>\n",
+       "      <td>47</td>\n",
+       "      <td>911</td>\n",
+       "      <td>153.08</td>\n",
+       "      <td>21042</td>\n",
+       "      <td>397.5</td>\n",
+       "      <td>70.31</td>\n",
+       "      <td>34.9866</td>\n",
+       "      <td>105.5956</td>\n",
+       "      <td>18579.0</td>\n",
+       "      <td>8978.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-06-12 20:00:00</th>\n",
+       "      <td>289</td>\n",
+       "      <td>4506</td>\n",
+       "      <td>67</td>\n",
+       "      <td>1037</td>\n",
+       "      <td>8268</td>\n",
+       "      <td>274</td>\n",
+       "      <td>97</td>\n",
+       "      <td>204</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>987</td>\n",
+       "      <td>134.96</td>\n",
+       "      <td>19688</td>\n",
+       "      <td>2161.6</td>\n",
+       "      <td>70.31</td>\n",
+       "      <td>34.9866</td>\n",
+       "      <td>105.5956</td>\n",
+       "      <td>18579.0</td>\n",
+       "      <td>8978.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-06-12 21:00:00</th>\n",
+       "      <td>249</td>\n",
+       "      <td>4035</td>\n",
+       "      <td>69</td>\n",
+       "      <td>834</td>\n",
+       "      <td>6909</td>\n",
+       "      <td>274</td>\n",
+       "      <td>0</td>\n",
+       "      <td>190</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1143</td>\n",
+       "      <td>107.44</td>\n",
+       "      <td>18085</td>\n",
+       "      <td>3136.0</td>\n",
+       "      <td>70.31</td>\n",
+       "      <td>34.9866</td>\n",
+       "      <td>105.5956</td>\n",
+       "      <td>18579.0</td>\n",
+       "      <td>8978.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-06-12 22:00:00</th>\n",
+       "      <td>227</td>\n",
+       "      <td>3015</td>\n",
+       "      <td>69</td>\n",
+       "      <td>770</td>\n",
+       "      <td>6936</td>\n",
+       "      <td>275</td>\n",
+       "      <td>0</td>\n",
+       "      <td>167</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1207</td>\n",
+       "      <td>103.01</td>\n",
+       "      <td>16936</td>\n",
+       "      <td>3072.2</td>\n",
+       "      <td>70.31</td>\n",
+       "      <td>34.9866</td>\n",
+       "      <td>105.5956</td>\n",
+       "      <td>18579.0</td>\n",
+       "      <td>8978.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2024-06-12 23:00:00</th>\n",
+       "      <td>231</td>\n",
+       "      <td>2974</td>\n",
+       "      <td>70</td>\n",
+       "      <td>907</td>\n",
+       "      <td>6848</td>\n",
+       "      <td>274</td>\n",
+       "      <td>0</td>\n",
+       "      <td>164</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1097</td>\n",
+       "      <td>106.06</td>\n",
+       "      <td>15839</td>\n",
+       "      <td>2185.1</td>\n",
+       "      <td>70.31</td>\n",
+       "      <td>34.9866</td>\n",
+       "      <td>105.5956</td>\n",
+       "      <td>18579.0</td>\n",
+       "      <td>8978.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>21456 rows × 19 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     biomass  brown_coal/lignite  coal_derived_gas  \\\n",
+       "Date (UTC)                                                           \n",
+       "2022-01-01 00:00:00      221                2422                64   \n",
+       "2022-01-01 01:00:00      221                2466                64   \n",
+       "2022-01-01 02:00:00      223                2560                65   \n",
+       "2022-01-01 03:00:00      225                2420                65   \n",
+       "2022-01-01 04:00:00      229                2416                64   \n",
+       "...                      ...                 ...               ...   \n",
+       "2024-06-12 19:00:00      289                4744                67   \n",
+       "2024-06-12 20:00:00      289                4506                67   \n",
+       "2024-06-12 21:00:00      249                4035                69   \n",
+       "2024-06-12 22:00:00      227                3015                69   \n",
+       "2024-06-12 23:00:00      231                2974                70   \n",
+       "\n",
+       "                     natural_gas  hard_coal  oil  hydro_pumped_storage  \\\n",
+       "Date (UTC)                                                               \n",
+       "2022-01-01 00:00:00          996       5685  280                     0   \n",
+       "2022-01-01 01:00:00         1003       5683  277                     0   \n",
+       "2022-01-01 02:00:00          996       5704  276                     0   \n",
+       "2022-01-01 03:00:00          996       5621  276                     0   \n",
+       "2022-01-01 04:00:00          996       5621  275                     0   \n",
+       "...                          ...        ...  ...                   ...   \n",
+       "2024-06-12 19:00:00         1073       9854  273                   682   \n",
+       "2024-06-12 20:00:00         1037       8268  274                    97   \n",
+       "2024-06-12 21:00:00          834       6909  274                     0   \n",
+       "2024-06-12 22:00:00          770       6936  275                     0   \n",
+       "2024-06-12 23:00:00          907       6848  274                     0   \n",
+       "\n",
+       "                     hydro_run_of_river  hydro_water_reservoir  solar  wind  \\\n",
+       "Date (UTC)                                                                    \n",
+       "2022-01-01 00:00:00                 176                      0      0  4244   \n",
+       "2022-01-01 01:00:00                 199                      0      0  4071   \n",
+       "2022-01-01 02:00:00                 216                      0      0  3997   \n",
+       "2022-01-01 03:00:00                 238                      0      0  4105   \n",
+       "2022-01-01 04:00:00                 245                      0      0  4085   \n",
+       "...                                 ...                    ...    ...   ...   \n",
+       "2024-06-12 19:00:00                 229                     40     47   911   \n",
+       "2024-06-12 20:00:00                 204                     40      0   987   \n",
+       "2024-06-12 21:00:00                 190                     40      0  1143   \n",
+       "2024-06-12 22:00:00                 167                      5      0  1207   \n",
+       "2024-06-12 23:00:00                 164                      0      0  1097   \n",
+       "\n",
+       "                     day_ahead_price_eur  day_ahead_load_forecast  \\\n",
+       "Date (UTC)                                                          \n",
+       "2022-01-01 00:00:00                49.37                    14750   \n",
+       "2022-01-01 01:00:00                43.22                    14100   \n",
+       "2022-01-01 02:00:00                45.46                    13700   \n",
+       "2022-01-01 03:00:00                37.67                    13450   \n",
+       "2022-01-01 04:00:00                39.70                    13500   \n",
+       "...                                  ...                      ...   \n",
+       "2024-06-12 19:00:00               153.08                    21042   \n",
+       "2024-06-12 20:00:00               134.96                    19688   \n",
+       "2024-06-12 21:00:00               107.44                    18085   \n",
+       "2024-06-12 22:00:00               103.01                    16936   \n",
+       "2024-06-12 23:00:00               106.06                    15839   \n",
+       "\n",
+       "                     trade_balance  co2_eur/ton  natural_gas_eur/mwh  \\\n",
+       "Date (UTC)                                                             \n",
+       "2022-01-01 00:00:00           -0.0        82.71              89.7754   \n",
+       "2022-01-01 01:00:00         -127.0        82.71              89.7754   \n",
+       "2022-01-01 02:00:00         -722.6        82.71              89.7754   \n",
+       "2022-01-01 03:00:00         -519.2        82.71              89.7754   \n",
+       "2022-01-01 04:00:00         -431.7        82.71              89.7754   \n",
+       "...                            ...          ...                  ...   \n",
+       "2024-06-12 19:00:00          397.5        70.31              34.9866   \n",
+       "2024-06-12 20:00:00         2161.6        70.31              34.9866   \n",
+       "2024-06-12 21:00:00         3136.0        70.31              34.9866   \n",
+       "2024-06-12 22:00:00         3072.2        70.31              34.9866   \n",
+       "2024-06-12 23:00:00         2185.1        70.31              34.9866   \n",
+       "\n",
+       "                     coal_eur/ton  installed_solar_capacity  installed_wind  \n",
+       "Date (UTC)                                                                   \n",
+       "2022-01-01 00:00:00       63.9408                    8161.0          6570.0  \n",
+       "2022-01-01 01:00:00       63.9408                    8161.0          6570.0  \n",
+       "2022-01-01 02:00:00       63.9408                    8161.0          6570.0  \n",
+       "2022-01-01 03:00:00       63.9408                    8161.0          6570.0  \n",
+       "2022-01-01 04:00:00       63.9408                    8161.0          6570.0  \n",
+       "...                           ...                       ...             ...  \n",
+       "2024-06-12 19:00:00      105.5956                   18579.0          8978.0  \n",
+       "2024-06-12 20:00:00      105.5956                   18579.0          8978.0  \n",
+       "2024-06-12 21:00:00      105.5956                   18579.0          8978.0  \n",
+       "2024-06-12 22:00:00      105.5956                   18579.0          8978.0  \n",
+       "2024-06-12 23:00:00      105.5956                   18579.0          8978.0  \n",
+       "\n",
+       "[21456 rows x 19 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "774007ba",
    "metadata": {},
    "outputs": [],
    "source": [
+    "df.reset_index(inplace=True)  # bring back Date (UTC)\n",
+    "df.rename(columns={\"Date (UTC)\":\"datetime\"}, inplace=True)\n",
+    "df[\"datetime\"] = pd.to_datetime(df[\"datetime\"])\n",
     "df.to_csv(\"clean_data.csv\", index=False)"
    ]
   }
