--- a/task1/task1.ipynb
+++ b/task1/task1.ipynb
@@ -1,12 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "ac747b7f",
+   "metadata": {},
+   "source": [
+    "### Imports & plotting style"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fe79d29d",
+   "id": "094d34e5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from __future__ import annotations\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -15,7 +24,6 @@
     "from skfda.representation.grid import FDataGrid\n",
     "from skfda.representation.basis import FourierBasis\n",
     "from skfda.ml.regression import LinearRegression\n",
-    "from __future__ import annotations\n",
     "from typing import Tuple, List, Dict\n",
     "import calendar\n",
     "\n",
@@ -24,24 +32,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d6eda04",
+   "id": "4e3c4f6b",
    "metadata": {},
    "source": [
-    "### Helper Functions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "17509ac4",
-   "metadata": {},
-   "source": [
-    "#### Plot Data Helper"
+    "### Monthly daily-series helpers & 4-panel plot"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "224e84e5",
+   "id": "1a529275",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,16 +127,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81e32183",
+   "id": "abdebe5e",
    "metadata": {},
    "source": [
-    "#### Small Helpers"
+    "### Small Utilities for curve evaluation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a32e9f41",
+   "id": "21fb4d0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,16 +157,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56697305",
+   "id": "dcd9ce88",
    "metadata": {},
    "source": [
-    "#### Domain Definitions"
+    "### Calendar domain construction & aggregation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b88b33f2",
+   "id": "44b13f59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,24 +218,8 @@
     "        T = len(years_sorted)\n",
     "        x_label = f\"year index (0–{T-1})\"\n",
     "\n",
-    "    return d, T, x_label"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b3786ee5",
-   "metadata": {},
-   "source": [
-    "#### Aggregation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "50dcd844",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return d, T, x_label\n",
+    "\n",
     "def aggregate_sample_domain(\n",
     "    d: pd.DataFrame,\n",
     "    y_col: str,\n",
@@ -264,28 +248,28 @@
     "\n",
     "    Yw = Yw.loc[good]\n",
     "    Xw_list = [Xw.loc[good] for Xw in Xw_list]\n",
-    "    return Yw, Xw_list"
+    "    return Yw, Xw_list\n",
+    "\n",
+    "def center_predictor_curves(Xw_list: List[pd.DataFrame]) -> List[pd.DataFrame]:\n",
+    "    \"\"\"Center each predictor matrix by its column means so α(t) is baseline at mean profiles.\"\"\"\n",
+    "    return [Xw - Xw.mean(axis=0) for Xw in Xw_list]\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2e69fd40",
+   "id": "12430ce5",
    "metadata": {},
    "source": [
-    "#### Centering and Functional Basis"
+    "### Fourier basis conversion & concurrent regression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "39842d13",
+   "execution_count": 5,
+   "id": "0c80775a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def center_predictor_curves(Xw_list: List[pd.DataFrame]) -> List[pd.DataFrame]:\n",
-    "    \"\"\"Center each predictor matrix by its column means so α(t) is baseline at mean profiles.\"\"\"\n",
-    "    return [Xw - Xw.mean(axis=0) for Xw in Xw_list]\n",
-    "\n",
     "def to_basis(\n",
     "    Yw: pd.DataFrame,\n",
     "    Xw_list: List[pd.DataFrame],\n",
@@ -306,24 +290,7 @@
     "    Y_b = Y_g.to_basis(basis_y)\n",
     "    X_b_list = [Xg.to_basis(basis_x) for Xg in X_g_list]\n",
     "    return Y_b, X_b_list, basis_x, basis_y\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8ad31f93",
-   "metadata": {},
-   "source": [
-    "#### Fit FoF"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "1ddb753b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    \n",
     "def fit_concurrent(\n",
     "    Y_b,\n",
     "    X_b_list: List[object],\n",
@@ -335,24 +302,8 @@
     "        coef_basis=[basis_x] * p,\n",
     "        fit_intercept=True\n",
     "    ).fit(X_b_list, Y_b)\n",
-    "    return model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8bbd5b17",
-   "metadata": {},
-   "source": [
-    "#### Evaluation and briefings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "5764b1af",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return model\n",
+    "\n",
     "def evaluate_model(\n",
     "    model: LinearRegression,\n",
     "    T: int,\n",
@@ -374,8 +325,24 @@
     "        betas_j.append(bj)\n",
     "        betas_fine_j.append(bjf)\n",
     "\n",
-    "    return t_int, alpha, betas_j, t_fine, alpha_f, betas_fine_j\n",
-    "\n",
+    "    return t_int, alpha, betas_j, t_fine, alpha_f, betas_fine_j\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f8b7c07",
+   "metadata": {},
+   "source": [
+    "### Tidy Outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "74bfb1fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def make_betas_df(\n",
     "    t_int: np.ndarray,\n",
     "    alpha: np.ndarray,\n",
@@ -403,16 +370,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3d0106e",
+   "id": "440fc8c6",
    "metadata": {},
    "source": [
-    "#### Plots"
+    "### Plot α(t) and b_j(t) panels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "7feac1ce",
+   "execution_count": 7,
+   "id": "774cc47f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,21 +422,21 @@
     "\n",
     "    if save_path:\n",
     "        fig.savefig(save_path, dpi=160)\n",
-    "    return fig"
+    "    return fig\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7e90453f",
+   "id": "303959b2",
    "metadata": {},
    "source": [
-    "#### Main wrapper"
+    "### Fit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "7e79c530",
+   "execution_count": 8,
+   "id": "13fa5bb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,21 +498,21 @@
     "        print(f\"Saved: {save_prefix}_{calendar}_betas.csv\")\n",
     "        print(f\"Saved: {save_prefix}_{calendar}_betas.png\")\n",
     "\n",
-    "    return betas_df, fig, brief"
+    "    return betas_df, fig, brief\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2fd6b983",
+   "id": "b9de9df5",
    "metadata": {},
    "source": [
-    "### Setup"
+    "### Paths, column names, labels & data load"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "04bf4382",
+   "execution_count": 9,
+   "id": "60bf59c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,21 +522,21 @@
     "X_COLS   = [\"co2_eur/ton\", \"natural_gas_eur/mwh\", \"coal_eur/ton\"]\n",
     "LABELS   = [\"CO₂\", \"Gas\", \"Coal\"]\n",
     "\n",
-    "df = pd.read_csv(CSV_PATH)"
+    "df = pd.read_csv(CSV_PATH)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fe46476a",
+   "id": "7a5ef605",
    "metadata": {},
    "source": [
-    "#### Hourly Curves"
+    "### Fit hour domain"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "e347fa0a",
+   "execution_count": 10,
+   "id": "fbc7c17f",
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +800,7 @@
        "23  23  113.532908  1.247350  0.499327  -0.040163"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -859,16 +826,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "696ba3d8",
+   "id": "ed6c1894",
    "metadata": {},
    "source": [
-    "#### Weekly Curves"
+    "### Fit week domain"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "43fb307b",
+   "execution_count": 11,
+   "id": "62e91092",
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1351,7 @@
        "51  51  118.989222   1.901802  0.838772   0.012606"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1410,16 +1377,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f03d37a1",
+   "id": "4da823aa",
    "metadata": {},
    "source": [
-    "#### Monthly Curves"
+    "### Fit month domain"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "76b147bc",
+   "execution_count": 12,
+   "id": "eddebfab",
    "metadata": {},
    "outputs": [
     {
@@ -1575,7 +1542,7 @@
        "11  11  135.722532    9.905193  3.929305   9.749485"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1601,16 +1568,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6649a9f",
+   "id": "e4b3d2e4",
    "metadata": {},
    "source": [
-    "#### Quarterly Curves"
+    "### Fit quarter domain"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "57b32526",
+   "execution_count": 13,
+   "id": "0c6c3fba",
    "metadata": {},
    "outputs": [
     {
@@ -1694,7 +1661,7 @@
        "3  3  125.317174  28.730273  0.861808   1.756921"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1720,16 +1687,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec385300",
+   "id": "febfe823",
    "metadata": {},
    "source": [
-    "### Example plots of Data for FoF models"
+    "### Visual Exploration (monthly)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "86d65864",
+   "execution_count": 14,
+   "id": "4f13bde4",
    "metadata": {},
    "outputs": [
     {
